kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: requirements-manager
spec:
  selector:
    app: requirements-manager
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
