kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: requirements-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /requirements(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: requirements-manager
            port:
              number: 80
